Fix buttons alignment

--- a/frontend/src/components/UserListItem/styles.module.sass
+++ b/frontend/src/components/UserListItem/styles.module.sass
@@ -9,9 +9,13 @@
   width: 100%
   background-color: #fff
 
-  .button
+  .buttonContainer
+    display: inline-flex
     align-self: center
     margin-left: auto
+
+  .button
+    margin-left: 20px
 
   .userImage
     margin-right: 15px
